# Miliastra-Wonderland-Music

./: .gitattributes  .gitignore  CONTEXT.md  Cargo.toml  LICENSE  MIGRATION_PLAN.md  README.md  THIRD_PARTY_NOTICES.md  build.rs  config.yaml  turtle_soup.example.yaml  undercover.example.yaml  undercover.yaml
.cargo/: config.toml
.github/workflows/: build-windows-cuda-mnn.yml  build-windows-exe.yml  build-windows-openvino.yml
assets/: idioms.txt
docs/: ai-song-review-flow.md  chat-command-ingestion.md  code-walkthrough.md  command-model-locks.md  config-observability-flow.md  custom-workflow-moderation-flow.md  executor-flow.md  idiom-chain.md  index.md  ocr-ui-detection-flow.md  playback-queue-flow.md  player-controller-flow.md  refactor-target-architecture.md  secondary-chat-listener.md  song-request-flow.md  startup-wonderland-flow.md  supporting-runtime-modules.md  turtle-soup.md  ui-automation-atoms.md  undercover.md  web-monitor-api.md  web-tools.md
docs/adr/: 0001-configurable-pixel-stability-after-template-absence.md  0002-explicit-focus-before-atomic-actions.md  0003-validated-windows-game-activation.md  0004-separate-window-focus-point.md  0005-remote-console-tasks-are-queued.md  0006-startup-enter-wonderland-only.md  0007-player-controller-state-machine.md  0008-consume-undercover-word-pair-before-delivery.md  0009-web-control-does-not-impersonate-undercover-players.md  0010-undercover-domain-returns-delivery-intents.md  0011-fail-closed-on-undercover-usage-record-errors.md  0012-prioritize-architecture-over-backward-compatibility.md  0013-prefer-feature-workflows-over-a-universal-engine.md  0014-use-a-library-core-with-a-thin-binary-entry.md  0015-use-owned-runtime-threads-and-typed-channels.md  0016-hide-ocr-engines-behind-an-ocr-runtime.md  0017-separate-ocr-template-matching-and-visual-location.md  0018-use-one-ui-runtime-owner-for-game-window-access.md  0019-suspend-business-waits-outside-the-ui-runtime.md  0020-keep-business-scheduling-outside-the-ui-runtime.md  0021-make-ui-routines-exclusive-by-default.md  0022-use-a-source-level-allowlist-for-yielding-ui-routines.md  0023-use-independent-typed-contracts-for-ui-routines.md  0024-make-custom-workflows-the-only-raw-atom-composer.md  0025-report-input-certainty-for-ui-routine-failures.md  0026-keep-mechanical-retries-inside-ui-routines.md  0027-reuse-ui-routine-frames-only-with-matching-observation-context.md  0028-compute-shared-ui-state-once-per-observation-frame.md  0029-preserve-evidence-for-shared-ui-state-decisions.md  0030-separate-single-frame-ui-classification-from-stability-tracking.md  0031-use-a-global-default-with-local-stability-count-overrides.md  0032-assign-stable-identities-to-observed-chat-messages.md  0033-report-observation-gaps-without-blocking-the-shared-stream.md  0034-isolate-exclusive-observation-sessions-from-the-shared-stream.md  0035-use-a-redacted-type-for-sensitive-text.md  0036-let-vertical-modules-own-command-syntax.md  0037-route-hash-commands-to-one-entertainment-module.md  0038-let-each-vertical-module-own-its-application-service.md  0039-inject-narrow-capability-ports-into-business-modules.md  0040-own-all-vertical-business-state-on-one-runtime-thread.md  (+48 more)
docs/research/: deepseek-turtle-soup-api.md  deepseek-turtle-soup-evaluation.md  idiom-lexicon-source.md  openvino-ocr-models.md
src/: app.rs  composition.rs  lib.rs  main.rs  privacy.rs  text.rs
src/adapters/: ai_http.rs  feeluown.rs  file_store.rs  logging.rs  mod.rs  player.rs
src/adapters/windows/: clipboard.rs  device.rs  dpi.rs  game.rs  input.rs  mod.rs  window.rs
src/app/: ai.rs  change_detection.rs  chat_listener.rs  chat_observation.rs  chat_output.rs  chat_scan.rs  clipboard.rs  command.rs  config.rs  config_migration.rs  custom_workflow.rs  decision_control.rs  decision_lock.rs  deferred_chat.rs  dpi.rs  entertainment.rs  feeluown.rs  frame_source.rs  game_startup.rs  game_ui.rs  geometry.rs  hall_info.rs  hotkeys.rs  http_server.rs  idiom_chain.rs  input_actions.rs  landlord.rs  logger.rs  manual_tools.rs  moderation_adapter.rs  monitor.rs  notification.rs  ocr.rs  ocr_batch.rs  ocr_runtime.rs  page.html  playback_format.rs  player_controller.rs  queue.rs  runtime_state.rs  (+18 more)
src/composition/: application.rs
src/config/: migration.rs  mod.rs
src/features/: administration.rs  card_games.rs  chat_text.rs  command.rs  custom_workflow.rs  entertainment.rs  friend_delivery.rs  hall.rs  idiom_chain.rs  invite.rs  mod.rs  moderation.rs  startup.rs
src/interfaces/: chat.rs  hotkeys.rs  mod.rs  tui.rs  ui_plan.rs
src/observation/: chat.rs  decision.rs  exclusive.rs  mod.rs  shared.rs
src/runtime/: business.rs  chat_listener.rs  clock.rs  deadline.rs  deadline_bridge.rs  decision.rs  deferred_chat.rs  identity.rs  mod.rs  monitor.rs  ocr.rs  openai.rs  player.rs  player_io.rs  scheduler.rs  timer.rs  ui.rs
src/ui/: atoms.rs  change_detection.rs  chat_output.rs  frame.rs  geometry.rs  locator.rs  mod.rs  state.rs  template.rs
tests/: ui_runtime.rs
yunzai-plugin/: README.md  package.json
(+60 files in other folders)
