[package]
name = "miliastra-wonderland-music"
version = "1.2.0"
edition = "2024"
license = "MIT"

[features]
default = []

[dependencies]
anyhow = "1"
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
enigo = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
ocr-rs = { git = "https://github.com/zibo-chen/rust-paddle-ocr.git", tag = "v2.3.1", features = ["mnn-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
template-matching = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
