[package]
name = "miliastra-wonderland-music"
version = "3.2.0"
edition = "2024"
license = "MIT"

[features]
default = []

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
enigo = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pinyin = { version = "0.11", default-features = false, features = ["plain"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
ocr-rs = { git = "https://github.com/zibo-chen/rust-paddle-ocr.git", tag = "v2.3.1", features = ["mnn-dynamic"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
template-matching = { version = "0.2", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Authentication_Identity",
  "Win32_Storage_FileSystem",
  "Win32_System_DataExchange",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
