[package]
name = "miliastra-wonderland-music"
version = "4.1.0"
edition = "2024"
license = "MIT"

[features]
# Build one EXE containing both runtime-discoverable OCR adapters. The optional
# DLLs are still loaded only when their backend is selected at runtime.
default = ["ocr-mnn", "ocr-openvino"]
# PaddleOCR/MNN backend. It can be disabled for an OpenVINO-only build.
ocr-mnn = ["dep:ocr-rs"]
# OpenVINO OCR adapter. The OpenVINO runtime is loaded dynamically only when
# `backend_priority` selects `openvino`.
ocr-openvino = ["dep:imageproc", "dep:openvino"]

[dependencies]
anyhow = "1"
async-openai = { version = "0.41.1", default-features = false, features = ["byot", "chat-completion", "middleware", "responses", "rustls"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
enigo = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.25", optional = true }
log = { version = "0.4", features = ["std"] }
pinyin = { version = "0.11", default-features = false, features = ["plain"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
ocr-rs = { git = "https://github.com/zibo-chen/rust-paddle-ocr.git", tag = "v2.3.1", optional = true, features = ["mnn-dynamic"] }
openvino = { version = "0.11.0", optional = true, default-features = false, features = ["runtime-linking"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
template-matching = { version = "0.2", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Authentication_Identity",
  "Win32_Storage_FileSystem",
  "Win32_System_DataExchange",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
# Favor runtime performance over binary size.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
